# haskell-accumulator

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix
.github/actions/nix-cachix-setup/: action.yml
.github/workflows/: ci-nix.yaml  ci.yml
haskell-accumulator/: haskell-accumulator.cabal
haskell-accumulator/lib/: Accumulator.hs  Bindings.hs  Field.hs
haskell-accumulator/lib/Bindings/: Internal.hs
haskell-accumulator/test/: Main.hs
nix/: configuration.nix  outputs.nix  pkgs.nix  project.nix  shell.nix  systems.nix
nix/haskell-accumulator/: packages.nix  project.nix  shell.nix
